	  we use selfupdate to populate override.shlibs)
	* Engine.pm: added forget, and require for shlibs to enable auto index
	* Package.pm: removed a \n to clean up the output since the shlibs
	  index code is always called after the pkg index code
	* PkgVersion.pm: adding ${SHLIB_DEPS} replace code, had to ignore
	  ${SHLIB_DEPS} in resolve_depends

2003-07-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: switch from BSD tar to /bin/pax for the
	implementation of TarFilesRename.

2003-07-06  Peter O'Gorman <ogorman@users.sourceforge.net>

	* VirtPackage.pm, Config.pm, Engine.pm, Package.pm, PkgVersion.pm, 
	Bootstrap.pm, Status.pm:
	Move all virtual package stuff to one file, add fink-virtual-pkgs file.

2003-07-05  Dave Morrison <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Revision of "Type: perl" to handle changes in 5.8.0
	(thanks to JF Mertens)

2003-07-04  Peter O'Gorman <ogorman@users.sourceforge.net>

	* Validation.pm: Check for hardcoded /sw in the scripts and set fields.

2003-07-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Removed some unnecessary debug stuff

2003-07-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Config.pm, Status.pm: added cctools-single-module
	  (cctools-<version>-1 is deprecated)
	  It is better to test capabilities than versions

2003-06-27  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Bootstrap.pm: Added checks for 10.3 tree
	* PkgVersion.pm: Adding RangerRick's patch for prebinding for 10.3 only

2003-06-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Bootstrapping with perl 5.6.1 also requires 
	storable-pm561.

2003-06-14  Max Horn  <max@quendi.de>

	* Bootstrap.pm: Allow bootstrapping with perl 5.6.1; cleaned up code; show
	  more user friendly error message in case of an unknown perl version.

2003-06-13  Ben Hines <benh57@users.sourceforge.net>

	* NetAccess.pm: Support file:// and bare tarball names without choking
	